apps/open/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: open
  template:
    metadata:
      labels:
        app: open
    spec:
      imagePullSecrets:
        - name: pikol-pull-secret
      containers:
        - name: open
          image: ghcr.io/moot-app/open:x.x.x
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 5
