apps/open/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: open
spec:
  selector:
    app: open
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8080
